Layout shift fix

--- a/src/index.sass
+++ b/src/index.sass
@@ -20,8 +20,8 @@
   --color-dark--0: #aaaaaa
   --color-dark--1: #ececec
   --color-dark--2: #d6dee0
-  --color-light--1: #242a2e
-  --color-light--2: #2d3439
+  --color-light--1: #aaaaaa
+  --color-light--2: #ececec
   --color-light--3: #42484d
 
 *
@@ -35,6 +35,7 @@ ul, ol
 html
   font-size: 62.5%
   box-sizing: border-box
+  scrollbar-gutter: stable // prevent layout shift
 
 body
   font-family: "Manrope", sans-serif
